comente los margin de row para centrar con flex

--- a/index.html
+++ b/index.html
@@ -60,38 +60,37 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s3 offset-s1">
-          <a>
-            <img
-              class="col s6 offset-s3 responsive-img"
-              src="assets/svg/diet.svg"
-            />
-            <p class="col center-align">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
-            </p>
-          </a>
-        </div>
-        <div class="col s3">
-          <a>
-            <img
-              class="col s6 offset-s3 responsive-img"
-              src="assets/svg/minuta.svg"
-            />
-            <p class="col center-align">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
-            </p>
-          </a>
-        </div>
-        <div class="col s3">
-          <a>
-            <img
-              class="col s6 offset-s3 responsive-img"
-              src="assets/svg/coaching.svg"
-            />
-            <p class="col center-align">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
-            </p>
-          </a>
+        <div class="wrap col s10 offset-s1">
+          <div class="hover-p col s12 m4">
+            <a class="justify-center">
+              <img class="col s4 m6 responsive-img" src="assets/svg/diet.svg" />
+              <p class="col grey-text center-align">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
+              </p>
+            </a>
+          </div>
+          <div class="hover-p col s12 m4">
+            <a class="justify-center">
+              <img
+                class="col s4 m6 responsive-img"
+                src="assets/svg/minuta.svg"
+              />
+              <p class="col grey-text center-align">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
+              </p>
+            </a>
+          </div>
+          <div class="hover-p col s12 m4">
+            <a class="justify-center">
+              <img
+                class="col s4 m6 responsive-img"
+                src="assets/svg/coaching.svg"
+              />
+              <p class="col grey-text center-align">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum
+              </p>
+            </a>
+          </div>
         </div>
       </div>
       <div class="row">
