todo parece andar excelente modifique el primer row del index

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
     </ul>
 
     <main class="container main">
-      <div class="row">
-        <h1 class="col s10 offset-s1">Nutricion</h1>
-        <div class="col s4 push-s7">
-          <img class="responsive-img" src="assets/img/nutri.jpg" />
-        </div>
-        <div class="col s6 pull-s3 texto">
+      <div class="row justify-center">
+        <h1 class="col s10">Nutricion</h1>
+        <div class="col s10">
+          <img
+            class="col s6 m4 right clearfix responsive-img"
+            src="assets/img/nutri.jpg"
+          />
           <h2>Hola</h2>
-          <p>
+          <p class="col s12 m6">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
             reiciendis autem omnis nobis labore fugit quos modi porro recusandae
             quae rerum ut in doloribus est dolorum nihil, deserunt, hic
