--- a/index.html
+++ b/index.html
@@ -206,7 +206,33 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="grey-text">Footer Content</h5>
+            <p class="grey-text">
+              You can use rows and columns here to organize your footer content.
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="grey-text">Links</h5>
+            <ul>
+              <li><a class="grey-text" href="#!">Link 1</a></li>
+              <li><a class="grey-text" href="#!">Link 2</a></li>
+              <li><a class="grey-text" href="#!">Link 3</a></li>
+              <li><a class="grey-text" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          <span class="grey-text">© 2014 Copyright Text</span>
+          <a class="grey-text right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
   </body>
 </html>
